force-app/main/default/objects/MDU__c/MDU__c.object-meta.xml
<CustomObject>
    <description>Tracking for MDU projects</description>
    <label>MDU</label>
    <nameField>
        <label>Property Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>MDU</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>