force-app/main/default/objects/MDU__c/fields/Account_Name__c.field-meta.xml
<CustomField>
    <fullName>Account_Name__c</fullName>
    <formula>P10_Account__r.P10_Invoice_Account__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account #</label>
    <type>Text</type>
</CustomField>