force-app/main/default/objects/MDU__c/fields/Building_Count__c.field-meta.xml
<CustomField>
    <fullName>Building_Count__c</fullName>
    <description>Number of Building in a Project</description>
    <label>Building Count</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>