force-app/main/default/objects/MDU__c/fields/C41W_Receiver_Count__c.field-meta.xml
<CustomField>
    <fullName>C41W_Receiver_Count__c</fullName>
    <label>C41W Receiver Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>