force-app/main/default/objects/MDU__c/fields/Date_Rated__c.field-meta.xml
<CustomField>
    <fullName>Date_Rated__c</fullName>
    <label>Date Rated</label>
    <type>Date</type>
</CustomField>