force-app/main/default/objects/MDU__c/fields/DVR_Count__c.field-meta.xml
<CustomField>
    <fullName>DVR_Count__c</fullName>
    <label>DVR Count</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>