force-app/main/default/objects/MDU__c/fields/External_MDU_ID__c.field-meta.xml
<CustomField>
    <fullName>External_MDU_ID__c</fullName>
    <caseSensitive>true</caseSensitive>
    <externalId>true</externalId>
    <label>External MDU ID</label>
    <length>20</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>