force-app/main/default/objects/MDU__c/fields/Genie_Count__c.field-meta.xml
<CustomField>
    <fullName>Genie_Count__c</fullName>
    <label>Genie Count</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>