force-app/main/default/objects/MDU__c/fields/H25_Reciever_Count__c.field-meta.xml
<CustomField>
    <fullName>H25_Reciever_Count__c</fullName>
    <label>H25 Reciever Count</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>