force-app/main/default/objects/MDU__c/fields/MDU_ASM__c.field-meta.xml
<CustomField>
    <fullName>MDU_ASM__c</fullName>
    <description>Area Sales Manager assigned to a particular dealer</description>
    <label>MDU ASM</label>
    <type>TextArea</type>
</CustomField>