force-app/main/default/objects/MDU__c/fields/MDU_Type__c.field-meta.xml
<CustomField>
    <fullName>MDU_Type__c</fullName>
    <label>MDU Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Bulk</fullName>
            </value>
            <value>
                <fullName>DTH</fullName>
            </value>
            <value>
                <fullName>Preloaded</fullName>
            </value>
            <value>
                <fullName>DIRECTV Stream DTH</fullName>
            </value>
            <value>
                <fullName>DIRECTV Stream Bulk</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>