force-app/main/default/objects/MDU__c/fields/P10_Account__c.field-meta.xml
<CustomField>
    <fullName>P10_Account__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Account Name</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>MDU</relationshipLabel>
    <relationshipName>MDU</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>