force-app/main/default/objects/MDU__c/fields/Phased_of_Shipping_Receivers__c.field-meta.xml
<CustomField>
    <fullName>Phased_of_Shipping_Receivers__c</fullName>
    <label>Phased of Shipping Receivers</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>