force-app/main/default/objects/MDU__c/fields/PID_Number__c.field-meta.xml
<CustomField>
    <fullName>PID_Number__c</fullName>
    <label>PID Number</label>
    <length>8</length>
    <type>Text</type>
</CustomField>