force-app/main/default/objects/MDU__c/fields/Property_Address_City__c.field-meta.xml
<CustomField>
    <fullName>Property_Address_City__c</fullName>
    <description>City in which the project / property is located.</description>
    <label>Property Address City</label>
    <length>50</length>
    <type>Text</type>
</CustomField>