force-app/main/default/objects/MDU__c/fields/Property_Rating__c.field-meta.xml
<CustomField>
    <fullName>Property_Rating__c</fullName>
    <label>Property Rating</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Green</fullName>
            </value>
            <value>
                <fullName>Yellow</fullName>
            </value>
            <value>
                <fullName>Red</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>