force-app/main/default/objects/MDU__c/fields/SFDC_Opportunity_ID__c.field-meta.xml
<CustomField>
    <fullName>SFDC_Opportunity_ID__c</fullName>
    <label>SFDC Opportunity ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>