force-app/main/default/objects/MDU__c/fields/Shipment_1__c.field-meta.xml
<CustomField>
    <fullName>Shipment_1__c</fullName>
    <label>Shipment 1:</label>
    <type>Date</type>
</CustomField>