force-app/main/default/objects/MDU__c/fields/Shipment_2__c.field-meta.xml
<CustomField>
    <fullName>Shipment_2__c</fullName>
    <label>Shipment 2:</label>
    <type>Date</type>
</CustomField>