force-app/main/default/objects/MDU__c/fields/Shipment_3__c.field-meta.xml
<CustomField>
    <fullName>Shipment_3__c</fullName>
    <label>Shipment 3:</label>
    <type>Date</type>
</CustomField>