force-app/main/default/objects/MDU__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Site Survey</fullName>
            </value>
            <value>
                <fullName>BOM Design Review</fullName>
            </value>
            <value>
                <fullName>Property Valuation</fullName>
            </value>
            <value>
                <fullName>Sales Validation</fullName>
            </value>
            <value>
                <fullName>Preloaded receiver List</fullName>
            </value>
            <value>
                <fullName>Exceptions/Special Offers Approvals</fullName>
            </value>
            <value>
                <fullName>Finance preloaded Request</fullName>
            </value>
            <value>
                <fullName>ROE &amp; Property Registration</fullName>
                <label>ROE &amp; Agreement Property Registration</label>
            </value>
            <value>
                <fullName>ROE Review Legal</fullName>
                <label>ROE &amp; Agreement Legal Review</label>
            </value>
            <value>
                <fullName>Build Out</fullName>
            </value>
            <value>
                <fullName>Sent for BMU</fullName>
                <label>Send for BMU</label>
            </value>
            <value>
                <fullName>Inspection Request</fullName>
            </value>
            <value>
                <fullName>Property Release Request</fullName>
            </value>
            <value>
                <fullName>Closed Won</fullName>
            </value>
            <value>
                <fullName>Closed Lost</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>