force-app/main/default/objects/MDU__c/fields/Subs__c.field-meta.xml
<CustomField>
    <fullName>Subs__c</fullName>
    <label>Subs</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>