force-app/main/default/objects/MDU__c/fields/WVB_Receiver_Count__c.field-meta.xml
<CustomField>
    <fullName>WVB_Receiver_Count__c</fullName>
    <label>WVB Receiver Count</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>