force-app/main/default/objects/MDU__c/listViews/MDU_Build_Out_Sales_View.listView-meta.xml
<ListView>
    <fullName>MDU_Build_Out_Sales_View</fullName>
    <columns>Territory__c</columns>
    <columns>P10_Account__c</columns>
    <columns>Account_Name__c</columns>
    <columns>NAME</columns>
    <columns>PID_Number__c</columns>
    <columns>Status__c</columns>
    <columns>Launch_Date__c</columns>
    <columns>MDU_ASM__c</columns>
    <columns>MDU_Type__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Build Out,BOM Design Review</value>
    </filters>
    <label>MDU Build Out Sales View</label>
</ListView>