force-app/main/default/objects/MDU__c/listViews/MDU_View.listView-meta.xml
<ListView>
    <fullName>MDU_View</fullName>
    <columns>Territory__c</columns>
    <columns>NAME</columns>
    <columns>SFDC_Opportunity_ID__c</columns>
    <columns>Status__c</columns>
    <columns>Date_Assigned__c</columns>
    <columns>Launch_Date__c</columns>
    <columns>MDU_ASM__c</columns>
    <columns>MDU_Type__c</columns>
    <filterScope>Everything</filterScope>
    <label>MDU View</label>
</ListView>