force-app/main/default/objects/MDU__c/listViews/MDU_View_NE_SE.listView-meta.xml
<ListView>
    <fullName>MDU_View_NE_SE</fullName>
    <columns>Territory__c</columns>
    <columns>P10_Account__c</columns>
    <columns>NAME</columns>
    <columns>SFDC_Opportunity_ID__c</columns>
    <columns>Status__c</columns>
    <columns>Date_Assigned__c</columns>
    <columns>Launch_Date__c</columns>
    <columns>MDU_ASM__c</columns>
    <columns>MDU_Type__c</columns>
    <columns>Total_Units__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Territory__c</field>
        <operation>equals</operation>
        <value>FL</value>
    </filters>
    <filters>
        <field>P10_Account__c</field>
        <operation>greaterThan</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>Property_Address_US_State__c</field>
        <operation>equals</operation>
        <value>FL</value>
    </filters>
    <label>MDU View_ NE/SE</label>
</ListView>